Replace with current JDK 9 classes.